--- a/src/ekonomi.html
+++ b/src/ekonomi.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white z-20 fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between">
       <div class="flex items-center justify-center">
-        <img src="../assets/logo.png" alt="Logo" class="w-20 h-20" />
+        <img src="./assets/logo.png" alt="Logo" class="w-20 h-20" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
 
@@ -59,7 +59,7 @@
 
         <!-- Image Section -->
         <div class="w-full min-h-96 mb-6">
-          <img src="../assets/IMG_5706.PNG" alt="Blog Image" class="w-full h-full object-cover rounded-lg" />
+          <img src="./assets/IMG_5706.PNG" alt="Blog Image" class="w-full h-full object-cover rounded-lg" />
           <p class="text-sm text-gray-600 mb-6 text-center">Aktivitas di Pasar Induk Cikema, Jl. Raya Bogor, Cibinong, Jawa Barat</p>
         </div>
 
@@ -74,7 +74,7 @@
             Kenaikan harga pangan ini disebabkan oleh beberapa faktor, antara lain meningkatnya permintaan akan bahan makanan, keterbatasan pasokan, dan biaya produksi yang meningkat. Selain itu, kenaikan harga bahan bakar minyak (BBM) juga
             berdampak pada kenaikan harga pangan, karena biaya transportasi dan produksi meningkat.
           </p>
-          <img src="../assets/IMG_5707.PNG" alt="Blog Image" class="w-2/3 mx-auto object-cover rounded-lg" />
+          <img src="./assets/IMG_5707.PNG" alt="Blog Image" class="w-2/3 mx-auto object-cover rounded-lg" />
           <small><figcaption>Aktivitas di Pasar Induk Cikema, Jl. Raya Bogor, Cibinong, Jawa Barat</figcaption></small>
 
           <p class="mb-4">
@@ -96,7 +96,7 @@
         <div class="flex flex-row gap-x-8">
           <a href="ekonomi2.html" class="mb-8">
             <div class="flex flex-col md:flex-row items-center gap-x-4">
-              <img src="../assets/ekonomi2.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+              <img src="./assets/ekonomi2.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
               <div class="flex flex-col w-full">
                 <h1 class="text-lg font-bold mb-4 text-blue-950">RI Minta Apple Investasi Rp 16 Triliun Demi Jual iPhone 16</h1>
                 <p class="mb-2"><i class="fas fa-user mr-1"></i>Firda Dwi Muliawati - <span class="text-cyan-700">koma.com</span></p>
@@ -109,7 +109,7 @@
         <div class="flex flex-row gap-x-8">
           <a href="ekonomi3.html" class="mb-8">
             <div class="flex flex-col md:flex-row items-center gap-x-4">
-              <img src="../assets/ekonomi3.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+              <img src="./assets/ekonomi3.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
               <div class="flex flex-col w-full">
                 <h1 class="text-lg font-bold mb-4 text-blue-950">Komentar Emak-Emak Usai Prabowo Patok Uang Makan Gratis Rp 10.000</h1>
                 <p class="mb-2"><i class="fas fa-user mr-1"></i>Dela Naufalia - <span class="text-cyan-700">koma.com</span></p>
