--- a/src/kategori-hiburan.html
+++ b/src/kategori-hiburan.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white z-20 fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between">
       <div class="flex items-center justify-center">
-        <img src="../assets/logo.png" alt="Logo" class="w-20 h-20" />
+        <img src="./assets/logo.png" alt="Logo" class="w-20 h-20" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
 
@@ -53,7 +53,7 @@
       <div class="flex flex-col px-8">
         <a href="hiburan.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/IMG_1625.PNG" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/IMG_1625.PNG" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">Pameran Art Exhibition gratis di Jakarta</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i>Titania - <span class="text-cyan-700">koma.com</span></p>
@@ -67,7 +67,7 @@
         </a>
         <a href="hiburan2.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/hiburan2.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/hiburan2.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">Profil Evan Mock, Model MV “Toxic Till The End” Rosé BLACKPINK</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i>Melvina Tionardus - <span class="text-cyan-700">Kompas.com</span></p>
@@ -82,7 +82,7 @@
         </a>
         <a href="hiburan3.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/hiburan3.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/hiburan3.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">Daftar Lengkap Pemenang Spotify Wrapped Live Indonesia 2024</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i> (frl/end) <span class="text-cyan-700">CNN Indonesia</span></p>
