--- a/src/kategori-sport.html
+++ b/src/kategori-sport.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white z-20 fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between">
       <div class="flex items-center justify-center">
-        <img src="../assets/logo.png" alt="Logo" class="w-20 h-20" />
+        <img src="./assets/logo.png" alt="Logo" class="w-20 h-20" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
 
@@ -53,7 +53,7 @@
       <div class="flex flex-col px-8">
         <a href="sport.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/sport 1.PNG" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/sport 1.PNG" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">Pakansari Menjadi Tempat Favorit Masyarakat Cibinong Berolahraga</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i>Azahra Nabila - <span class="text-cyan-700">koma.com</span></p>
@@ -67,7 +67,7 @@
         </a>
         <a href="sport2.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/sport-2.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/sport-2.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">Apresiasi Tinggi bagi Keberhasilan Timnas Putri Indonesia di Tengah Absensi Liga</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i>Firzi A. Idris - <span class="text-cyan-700">kompas.com</span></p>
@@ -82,7 +82,7 @@
         </a>
         <a href="sport3.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/sport-3.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/sport-3.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">Erick Tohir Bangga Timnas Putri Akhiri Penantian 49 Tahun</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i>CNN Indonesia - <span class="text-cyan-700">CNN Indonesia</span></p>
