--- a/src/kuliner.html
+++ b/src/kuliner.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between z-50">
       <div class="flex items-center">
-        <img src="../assets/logo.png" alt="Logo Koma" class="w-12 h-12 mr-2" />
+        <img src="./assets/logo.png" alt="Logo Koma" class="w-12 h-12 mr-2" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
 
@@ -60,7 +60,7 @@
 
         <!-- Image Section -->
         <div class="w-full min-h-96 mb-6">
-          <img src="../assets/kuliner 1.PNG" alt="Pakansari olahraga" class="w-full h-full object-cover rounded-lg" />
+          <img src="./assets/kuliner 1.PNG" alt="Pakansari olahraga" class="w-full h-full object-cover rounded-lg" />
           <small><figure>Depan festival kolaborasi ciganjur (Neelam Natali/Koma.com)</figure></small>
         </div>
 
@@ -71,7 +71,7 @@
             untuk di nikmati yang tersedia pada festival kolaborasi ciganjur ini. Dalam festival ini, salah satu daya tariknya adalah dodol betawi, yang terkenal dengan tekstur kenyalnya dan ciri rasa manis yang dimilikinya .
           </p>
 
-          <img src="../assets/kuliner 2.PNG" alt="Aktivitas olahraga di Pakansari" class="w-full h-auto mx-auto object-cover rounded-lg mb-4" />
+          <img src="./assets/kuliner 2.PNG" alt="Aktivitas olahraga di Pakansari" class="w-full h-auto mx-auto object-cover rounded-lg mb-4" />
           <small><figure>Jajanan dodol betawi asli (Neelam Natali/Koma.com)</figure></small>
 
           <p class="mb-4">
