--- a/src/kuliner2.html
+++ b/src/kuliner2.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between z-50">
       <div class="flex items-center">
-        <img src="../assets/logo.png" alt="Logo Koma" class="w-12 h-12 mr-2" />
+        <img src="./assets/logo.png" alt="Logo Koma" class="w-12 h-12 mr-2" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
 
@@ -60,7 +60,7 @@
 
         <!-- Image Section -->
         <div class="w-full min-h-96 mb-6">
-          <img src="../assets/kuliner1.jpg" alt="Pakansari olahraga" class="w-full h-full object-cover rounded-lg" />
+          <img src="./assets/kuliner1.jpg" alt="Pakansari olahraga" class="w-full h-full object-cover rounded-lg" />
           <small><figcaption>Restoran ini menggabungkan elemen-elemen khas dari dua film legendaris Ghibli dengan sensasi kuliner ramen Jepang autentik, Kyuka Ramen cabang Depok (Amalia Novia Putri/detikcom)</figcaption></small>
         </div>
 
@@ -79,7 +79,7 @@
 
           <p class="mb-4">Dari luar, restoran itu memikat dengan dekorasi bangunan berwarna merah khas Jepang, sementara di dalamnya, suasana berubah menjadi dunia penuh keajaiban yang terinspirasi dari film-film Studio Ghibli</p>
 
-          <img src="../assets/kuliner1_3.jpg" alt="Kuliner 3" class="w-full h-auto mx-auto object-cover rounded-lg mb-4" />
+          <img src="./assets/kuliner1_3.jpg" alt="Kuliner 3" class="w-full h-auto mx-auto object-cover rounded-lg mb-4" />
           <small><figure>Restoran ini menggabungkan elemen-elemen khas dari dua film legendaris Ghibli dengan sensasi kuliner ramen Jepang autentik, Kyuka Ramen cabang Depok (Amalia Novia Putri/detikcom)</figure></small>
 
           <p class="mb-4">
@@ -97,7 +97,7 @@
             petualangan visual yang tak terlupakan. "Sebenarnya yang paling menonjol itu yang di gerbong kereta, dimana itu adalah salah satu scene ikonik di Spirited Away," ujar Angga.
           </p>
 
-          <img src="../assets/kuliner1_2.jpg" alt="Kuliner 3" class="w-full h-auto mx-auto object-cover rounded-lg mb-4" />
+          <img src="./assets/kuliner1_2.jpg" alt="Kuliner 3" class="w-full h-auto mx-auto object-cover rounded-lg mb-4" />
           <small><figcaption>Restoran ini menggabungkan elemen-elemen khas dari dua film legendaris Ghibli dengan sensasi kuliner ramen Jepang autentik, Kyuka Ramen cabang Depok (Amalia Novia Putri/detikcom)</figcaption></small>
 
           <p class="mb-4">
