--- a/src/kuliner3.html
+++ b/src/kuliner3.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between z-50">
       <div class="flex items-center">
-        <img src="../assets/logo.png" alt="Logo Koma" class="w-12 h-12 mr-2" />
+        <img src="./assets/logo.png" alt="Logo Koma" class="w-12 h-12 mr-2" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
 
@@ -60,7 +60,7 @@
 
         <!-- Image Section -->
         <div class="w-full min-h-96 mb-6">
-          <img src="../assets/kuliner3.jpg" alt="Pakansari olahraga" class="w-full h-full object-cover rounded-lg" />
+          <img src="./assets/kuliner3.jpg" alt="Pakansari olahraga" class="w-full h-full object-cover rounded-lg" />
           <small><figcaption>Foto: detikFood</figcaption></small>
         </div>
 
@@ -71,7 +71,7 @@
             kuliner kekinian yang diminati kaum Milenial dan Gen Z. Banyak tempat makan datang silih berganti, yang paling anyar ada Opor Susu Legendaris.
           </p>
 
-          <img src="../assets/kuliner3_1.jpg" alt="Kuliner 3" class="w-full h-auto mx-auto object-cover rounded-lg mb-4" />
+          <img src="./assets/kuliner3_1.jpg" alt="Kuliner 3" class="w-full h-auto mx-auto object-cover rounded-lg mb-4" />
           <small><figcaption>Hangat Gurih Opor Kuah Susu Ayam Asap dan Daging Sapi Foto: detikFood</figcaption></small>
           <p class="mb-4">
             Tempat makan ini baru buka awal bulan November lalu, tapi sudah terkenal karena sang pemilik, Jonathan Liandi merupakan gamer profesional sekaligus mantan pro player ternama. Setelah sukses di dunia E-sports, Jonathan menjajal
@@ -81,7 +81,7 @@
           <p class="mb-4">Berikut beberapa menu andalan di Opor Susu Legendaris:</p>
           <p class="mb-4">1. Opor dengan Kuah Susu</p>
 
-          <img src="../assets/kuliner3_2.jpg" alt="Kuliner 3" class="w-full h-auto mx-auto object-cover rounded-lg mb-4" />
+          <img src="./assets/kuliner3_2.jpg" alt="Kuliner 3" class="w-full h-auto mx-auto object-cover rounded-lg mb-4" />
           <small><figcaption>Hangat Gurih Opor Kuah Susu Ayam Asap dan Daging Sapi Foto: detikFood</figcaption></small>
 
           <p class="mb-4">
@@ -92,7 +92,7 @@
 
           <p class="mb-4">2. Opor Susu Ayam Legendaris</p>
 
-          <img src="../assets/kuliner3_3.jpg" alt="Kuliner 3" class="w-full h-auto mx-auto object-cover rounded-lg mb-4" />
+          <img src="./assets/kuliner3_3.jpg" alt="Kuliner 3" class="w-full h-auto mx-auto object-cover rounded-lg mb-4" />
 
           <p class="mb-4">
             Aroma kuahnya harum mengingatkan dengan opor ayam khas Lebaran. Bedanya di sini rasa kuah opornya lebih ringan dan creamy karena menggunakan susu sapi bukan santan. Selain itu rasa unik dari opor ini muncul dari ayam asap yang
