--- a/src/lifestyle.html
+++ b/src/lifestyle.html
@@ -15,7 +15,7 @@
   <!-- Navbar -->
   <nav class="w-full h-20 bg-white z-20 fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between">
     <div class="flex items-center justify-center">
-      <img src="../assets/logo.png" alt="Logo" class="w-20 h-20" />
+      <img src="./assets/logo.png" alt="Logo" class="w-20 h-20" />
       <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
     </div>
 
@@ -63,7 +63,7 @@
 
       <!-- Image Section -->
       <div class="w-full min-h-96 mb-6">
-        <img src="../assets/lifestyle.png" alt="Blog Image" class="w-full h-full object-cover rounded-lg" />
+        <img src="./assets/lifestyle.png" alt="Blog Image" class="w-full h-full object-cover rounded-lg" />
         <p class="text-sm text-gray-600 mb-6 text-center">Foto : koma.com/Aviatus Sholihah</p>
       </div>
 
