--- a/src/lifestyle3.html
+++ b/src/lifestyle3.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white z-20 fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between">
       <div class="flex items-center justify-center">
-        <img src="../assets/logo.png" alt="Logo" class="w-20 h-20" />
+        <img src="./assets/logo.png" alt="Logo" class="w-20 h-20" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
 
@@ -57,7 +57,7 @@
 
         <!-- Image Section -->
         <div class="w-full min-h-96 mb-6">
-          <img src="../assets/rebeca.png" alt="Blog Image" class="w-full h-full object-cover rounded-lg" />
+          <img src="./assets/rebeca.png" alt="Blog Image" class="w-full h-full object-cover rounded-lg" />
           <small
             ><figure>
               Foto : Entrepreneur, Putri Tanjung; Psikolog dan Parenting Expert, Samanta Elsener dalam Konferensi Pers BundaFest 2024 di Lotte Mall Jakarta, Jakarta Selatan, pada Jumat (06/12/2024).(Kompas.com/Rebecca Rosevanya)
