--- a/src/sosial2.html
+++ b/src/sosial2.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white z-20 fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between">
       <div class="flex items-center justify-center">
-        <img src="../assets/logo.png" alt="Logo" class="w-20 h-20" />
+        <img src="./assets/logo.png" alt="Logo" class="w-20 h-20" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
 
@@ -57,7 +57,7 @@
 
         <!-- Image Section -->
         <div class="w-full min-h-96 mb-6">
-          <img src="../assets/sosial2.png.jpg" alt="Blog Image" class="w-full h-full object-cover rounded-lg" />
+          <img src="./assets/sosial2.png.jpg" alt="Blog Image" class="w-full h-full object-cover rounded-lg" />
           <!-- <p class="text-sm text-gray-600 mb-6 text-center">Parade iringan musik betawi (setu babakan)</p> -->
         </div>
 
@@ -69,7 +69,7 @@
             berpartisipasi aktif dalam pembangunan, dan mendapatkan akses terhadap berbagai fasilitas publik.
           </p>
 
-          <img src="../assets/sosial2_1.jpg" alt="Blog Image" class="w-2/3 mx-auto object-cover rounded-lg" />
+          <img src="./assets/sosial2_1.jpg" alt="Blog Image" class="w-2/3 mx-auto object-cover rounded-lg" />
           <!-- <p class="text-sm text-gray-600 mb-6 text-center">Parade iringan musik betawi (setu babakan)</p> -->
 
           <p class="mb-4">
@@ -78,7 +78,7 @@
             pengurus yayasan, atas dedikasi mereka dalam mendukung anak-anak penyandang disabilitas mengembangkan potensi dan bakat mereka.
           </p>
 
-          <img src="../assets/sosial2_2.jpg" alt="Blog Image" class="w-2/3 mx-auto object-cover rounded-lg" />
+          <img src="./assets/sosial2_2.jpg" alt="Blog Image" class="w-2/3 mx-auto object-cover rounded-lg" />
           <!-- <p class="text-sm text-gray-600 mb-6 text-center">Parade iringan musik betawi (setu babakan)</p> -->
 
           <p class="mb-4">
@@ -86,7 +86,7 @@
             menegaskan bahwa perlindungan dan aksesibilitas bagi penyandang disabilitas akan terus ditingkatkan. Upaya tersebut mencakup peningkatan pelayanan dasar di bidang pendidikan, kesehatan, pelayanan publik, dan kesempatan kerja.
           </p>
 
-          <img src="../assets/sosial2_3.jpg" alt="Blog Image" class="w-2/3 mx-auto object-cover rounded-lg" />
+          <img src="./assets/sosial2_3.jpg" alt="Blog Image" class="w-2/3 mx-auto object-cover rounded-lg" />
           <!-- <p class="text-sm text-gray-600 mb-6 text-center">Parade iringan musik betawi (setu babakan)</p> -->
 
           <p class="mb-4">
@@ -94,7 +94,7 @@
             mendukung kalian sepenuhnya menuju masa depan yang lebih cerah," tutupnya. Acara peringatan Hari Disabilitas Internasional yang digelar tersebut, diisi dengan berbagai kegiatan kreatif dan inspiratif yang menunjukkan semangat
             keberagaman dan kebersamaan.
           </p>
-          <img src="../assets/sosial2_4.jpg" alt="Blog Image" class="w-2/3 mx-auto object-cover rounded-lg" />
+          <img src="./assets/sosial2_4.jpg" alt="Blog Image" class="w-2/3 mx-auto object-cover rounded-lg" />
           <!-- <p class="text-sm text-gray-600 mb-6 text-center">Parade iringan musik betawi (setu babakan)</p> -->
 
           <p class="mb-4">
@@ -111,7 +111,7 @@
         <div class="flex flex-row gap-x-8">
           <a href="sosial.html" class="mb-8">
             <div class="flex flex-row items-center gap-x-4">
-              <img src="../assets/ondel.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+              <img src="./assets/ondel.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
               <div class="flex flex-col w-full">
                 <h1 class="text-3xl font-bold mb-4 text-blue-950">Pelestarian ondel-ondel di masa modernisasi</h1>
                 <p class="mb-2"><i class="fas fa-user mr-1"></i>Adelia Puspita - <span class="text-cyan-700">koma.com</span></p>
@@ -127,7 +127,7 @@
         <div class="flex flex-row gap-x-8">
           <a href="sosial3.html" class="mb-8">
             <div class="flex flex-row items-center gap-x-4">
-              <img src="../assets/sosial3.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+              <img src="./assets/sosial3.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
               <div class="flex flex-col w-full">
                 <h1 class="text-lg font-bold mb-4 text-blue-950">Kebaya Masuk Daftar UNESCO, tapi Identitasnya Milik 5 Negara</h1>
                 <p class="mb-2"><i class="fas fa-user mr-1"></i>Bounali - <span class="text-cyan-700">koma.com</span></p>
