--- a/src/sport3.html
+++ b/src/sport3.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between z-50">
       <div class="flex items-center">
-        <img src="../assets/logo.png" alt="Logo Koma" class="w-12 h-full mr-2" />
+        <img src="./assets/logo.png" alt="Logo Koma" class="w-12 h-full mr-2" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
 
@@ -60,7 +60,7 @@
 
         <!-- Image Section -->
         <div class="w-full mb-6">
-          <img src="../assets/sport-3.jpg" alt="Timnas" class="w-full h-96 object-cover rounded-lg" />
+          <img src="./assets/sport-3.jpg" alt="Timnas" class="w-full h-96 object-cover rounded-lg" />
           <small><figcaption>Timnas Putri Indonesia menjadi juara Piala AFF 2024. (Dok PSSI)</figcaption></small>
         </div>
 
