--- a/src/about.html
+++ b/src/about.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white z-20 fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between">
       <div class="flex items-center justify-center">
-        <img src="../assets/logo.png" alt="Logo" class="w-20 h-20" />
+        <img src="./assets/logo.png" alt="Logo" class="w-20 h-20" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
       <div class="hidden md:flex flex-row gap-x-4 s">
@@ -85,7 +85,7 @@
 
       </div>
       <div class="col-span-12 lg:col-span-1 ">
-        <img src="../assets/logo.png" alt="Logo" class="w-3/5 h-3/5">
+        <img src="./assets/logo.png" alt="Logo" class="w-3/5 h-3/5">
       </div>
     </div>
      
