--- a/src/blog.html
+++ b/src/blog.html
@@ -17,7 +17,7 @@
       <nav class="w-full h-20 bg-white z-20 fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between">
         <!-- Logo -->
         <div class="flex items-center justify-center">
-          <img src="../assets/logo.png" alt="Logo" class="w-20 h-20" />
+          <img src="./assets/logo.png" alt="Logo" class="w-20 h-20" />
           <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
         </div>
 
@@ -65,10 +65,10 @@
 
         <!-- FOTO EKONOMI GANTI BAGIAN SRC, GANTI DENGAN GAMBAR YANG ADA DAN SIMPAN GAMBAR DI DALAM SRC/ASSETS -->
         <div class="md:grid md:grid-cols-2 md:gap-4 flex">
-          <img src="../assets/IMG_5706.PNG" width="100px" height="100px" alt="" class="w-60 h-32 md:w-72 md:-mt-8 md:h-44 mr-10 rounded-xl" />
-          <img src="../assets/img2.jpg" width="100px" height="100px" alt="" class="w-72 h-44 rounded-xl hidden md:block" />
-          <img src="../assets/img3.jpg" width="100px" height="100px" alt="" class="w-72 h-44 rounded-xl md:-mt-8 hidden md:block" />
-          <img src="../assets/IMG_5707.PNG" width="100px" height="100px" alt="" class="w-72 h-44 rounded-xl hidden md:block" />
+          <img src="./assets/IMG_5706.PNG" width="100px" height="100px" alt="" class="w-60 h-32 md:w-72 md:-mt-8 md:h-44 mr-10 rounded-xl" />
+          <img src="./assets/img2.jpg" width="100px" height="100px" alt="" class="w-72 h-44 rounded-xl hidden md:block" />
+          <img src="./assets/img3.jpg" width="100px" height="100px" alt="" class="w-72 h-44 rounded-xl md:-mt-8 hidden md:block" />
+          <img src="./assets/IMG_5707.PNG" width="100px" height="100px" alt="" class="w-72 h-44 rounded-xl hidden md:block" />
         </div>
       </div>
 
@@ -84,7 +84,7 @@
         </div>
 
         <!-- Single Article Section -->
-        <div class="flex relative rounded-xl md:h-[350px] md:w-[800px] h-[250px] w-[90%] mx-auto bg-cover bg-center" style="background-image: url('../assets/ondel.png'); opacity: 80%">
+        <div class="flex relative rounded-xl md:h-[350px] md:w-[800px] h-[250px] w-[90%] mx-auto bg-cover bg-center" style="background-image: url('./assets/ondel.png'); opacity: 80%">
           <div class="absolute bottom-4 left-4 right-4 bg-gradient-to-t via-transparent to-transparent rounded-xl p-4">
             <h1 class="text-white text-lg md:text-2xl font-bold">Pelestarian ondel-ondel di masa modernisasi</h1>
             <p class="text-white text-xs md:text-sm">
@@ -116,7 +116,7 @@
           <!-- GAMBAR 1 -->
           <div
             class="flex relative rounded-xl md:h-[350px] md:w-[400px] h-[200px] w-full md:w-[60%] hover:scale-105 duration-300"
-            style="background-image: url('../assets/lifestyle.png'); background-size: cover; background-position: center; opacity: 80%"
+            style="background-image: url('./assets/lifestyle.png'); background-size: cover; background-position: center; opacity: 80%"
           >
             <div class="absolute bottom-2 mx-4">
               <h1 class="text-white text-base md:text-lg font-bold">5 Tips Agar Kehamilan dan Persalinan Lancar dan Mudah</h1>
@@ -136,7 +136,7 @@
         <div class="flex flex-col md:flex-row w-full items-center md:mt-20 justify-between gap-y-6 md:gap-x-4">
           <!-- Gambar 1-->
           <div class="flex justify-center w-full md:w-[50%]">
-            <img src="../assets/hiburan.png" class="w-full max-w-[400px] md:max-w-[600px] h-auto md:h-72 rounded-xl object-cover" alt="Entertaiment" />
+            <img src="./assets/hiburan.png" class="w-full max-w-[400px] md:max-w-[600px] h-auto md:h-72 rounded-xl object-cover" alt="Entertaiment" />
           </div>
           <!-- Bagian Teks -->
           <div class="flex flex-col gap-y-3 w-full md:w-[50%] text-center md:text-left">
@@ -182,14 +182,14 @@
             <div class="flex flex-col md:flex-row gap-y-6 md:gap-x-3 w-full md:w-auto">
               <!-- Gambar 1 -->
               <div class="flex flex-col relative gap-y-3 w-full">
-                <img src="../assets/hiburan2.png" class="w-full md:w-96 h-56 hover:scale-105 cursor-pointer duration-300 rounded-xl object-cover" alt="Food 1" />
+                <img src="./assets/hiburan2.png" class="w-full md:w-96 h-56 hover:scale-105 cursor-pointer duration-300 rounded-xl object-cover" alt="Food 1" />
                 <div class="hidden md:flex flex-col mt-2">
                   <p class="text-sm text-slate-700">5 Jajanan Legend Betawi pada Festival Ciganjur</p>
                   <a href="" class="text-base text-slate-700 hover:text-[#d3a92a] mt-2"><a href="kuliner.html" class="text-yellow-400">Baca Sekarang</a> <i class="fa-solid fa-arrow-up rotate-45"></i></a>
                 </div>
               </div>
               <!-- Gambar 2 -->
-              <img src="../assets/hiburan3.png" class="w-full md:w-96 h-56 rounded-xl md:mt-10 hover:scale-105 object-cover" alt="Food 2" />
+              <img src="./assets/hiburan3.png" class="w-full md:w-96 h-56 rounded-xl md:mt-10 hover:scale-105 object-cover" alt="Food 2" />
             </div>
           </div>
         </div>
@@ -200,7 +200,7 @@
         <div class="flex flex-col md:flex-row w-full items-center justify-between md:px-8 gap-x-14 px-4">
           <!-- Gambar 1 SPORTS -->
           <div class="flex w-full md:w-1/2">
-            <img src="../assets/sport1.png" class="w-[500px] h-80 rounded-xl hover:scale-105" alt="" />
+            <img src="./assets/sport1.png" class="w-[500px] h-80 rounded-xl hover:scale-105" alt="" />
           </div>
           <div class="flex flex-col w-full md:w-1/2 gap-y-3">
             <h1 class="md:text-3xl text-xl">
