--- a/src/ekonomi2.html
+++ b/src/ekonomi2.html
@@ -15,7 +15,7 @@
   <!-- Navbar -->
   <nav class="w-full h-20 bg-white z-20 fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between">
     <div class="flex items-center justify-center">
-      <img src="../assets/logo.png" alt="Logo" class="w-20 h-20" />
+      <img src="./assets/logo.png" alt="Logo" class="w-20 h-20" />
       <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
     </div>
 
@@ -67,7 +67,7 @@
 
       <!-- Image Section -->
       <div class="w-full min-h-96 mb-6">
-        <img src="../assets/gambarrevisi.png" alt="Blog Image" class="w-full h-96 object-cover rounded-lg" />
+        <img src="./assets/gambarrevisi.png" alt="Blog Image" class="w-full h-96 object-cover rounded-lg" />
        <small><figcaption> Foto: Menteri Investasi/Kepala Badan Koordinasi Penanaman Modal (BKPM), Rosan Perkasa Roeslani . (YouTube/TVR Parlemen)
       </figcaption></small> 
         <p class="text-sm text-gray-600 mb-6 text-center"></p>
@@ -84,7 +84,7 @@
         </p>
 
 
-        <img src="../assets/menteri.png" alt="Blog Image" class="w-2/3 my-4 mx-auto object-cover rounded-lg" />
+        <img src="./assets/menteri.png" alt="Blog Image" class="w-2/3 my-4 mx-auto object-cover rounded-lg" />
 
         <p class="mb-4">
           Menteri Investasi Rosan Roeslani menyatakan bahwa Apple telah berkomunikasi dengan pemerintah dan
@@ -117,7 +117,7 @@
       <div class="flex flex-row gap-x-8">
         <a href="ekonomi.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/IMG_5706.PNG" width="100" height="100" class="w-96 h-72 rounded-xl" alt="">
+            <img src="./assets/IMG_5706.PNG" width="100" height="100" class="w-96 h-72 rounded-xl" alt="">
             <div class="flex flex-col w-full">
               <h1 class="text-lg font-bold mb-4 text-blue-950">Kenaikan Harga Pangan Menjelang Nataru
               </h1>
@@ -135,7 +135,7 @@
       <div class="flex flex-row gap-x-8">
         <a href="ekonomi3.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/ekonomi3.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="">
+            <img src="./assets/ekonomi3.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="">
             <div class="flex flex-col w-full">
               <h1 class="text-lg font-bold mb-4 text-blue-950">Komentar Emak-Emak Usai Prabowo Patok Uang Makan Gratis
                 Rp 10.000
