--- a/src/ekonomi3.html
+++ b/src/ekonomi3.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white z-20 fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between">
         <div class="flex items-center justify-center">
-            <img src="../assets/logo.png" alt="Logo" class="w-20 h-20" />
+            <img src="./assets/logo.png" alt="Logo" class="w-20 h-20" />
             <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
         </div>
 
@@ -70,7 +70,7 @@
             </div>
             <!-- Image Section -->
             <div class="w-full min-h-96 mb-6">
-                <img src="../assets/revisi.png" alt="Blog Image" class="w-full h-96 object-cover rounded-lg" />
+                <img src="./assets/revisi.png" alt="Blog Image" class="w-full h-96 object-cover rounded-lg" />
                 <small><figcaption>Pemangkasan anggaran makan bergizi gratis dari Rp15 ribu jadi Rp10 ribu membuat para 
                     ibu mengeluh karena itu tak cukup memenuhi kebutuhan gizi anak. (CNN Indonesia/Adhi Wicaksono).</figcaption></small>
                 <p class="text-sm text-gray-600 mb-6 text-center"></p>
@@ -86,7 +86,7 @@
                 </p>
 
 
-                <!-- <img src="../assets/menteri.png" alt="Blog Image" class="w-2/3 my-4 mx-auto object-cover rounded-lg" /> -->
+                <!-- <img src="./assets/menteri.png" alt="Blog Image" class="w-2/3 my-4 mx-auto object-cover rounded-lg" /> -->
 
                 <p class="mb-4">
                     Dengan begitu, sebenarnya setiap keluarga mendapatkan bantuan makan bergizi gratis Rp30 ribu-Rp40
@@ -142,7 +142,7 @@
             <div class="flex flex-row gap-x-8">
                 <a href="ekonomi.html" class="mb-8">
                     <div class="flex flex-col md:flex-row items-center gap-x-4">
-                        <img src="../assets/IMG_5706.PNG" width="100" height="100" class="w-96 h-72 rounded-xl" alt="">
+                        <img src="./assets/IMG_5706.PNG" width="100" height="100" class="w-96 h-72 rounded-xl" alt="">
                         <div class="flex flex-col w-full">
                             <h1 class="text-lg font-bold mb-4 text-blue-950">Kenaikan Harga Pangan Menjelang Nataru
                             </h1>
@@ -161,7 +161,7 @@
             <div class="flex flex-row gap-x-8">
                 <a href="ekonomi2.html" class="mb-8">
                     <div class="flex flex-col md:flex-row items-center gap-x-4">
-                        <img src="../assets/ekonomi2.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="">
+                        <img src="./assets/ekonomi2.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="">
                         <div class="flex flex-col w-full">
                             <h1 class="text-lg font-bold mb-4 text-blue-950">RI Minta Apple Investasi Rp 16 Triliun Demi
                                 Jual iPhone 16
