--- a/src/hiburan3.html
+++ b/src/hiburan3.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between z-50">
       <div class="flex items-center">
-        <img src="../assets/logo.png" alt="Logo Koma" class="w-12 h-12 mr-2" />
+        <img src="./assets/logo.png" alt="Logo Koma" class="w-12 h-12 mr-2" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
 
@@ -60,7 +60,7 @@
 
         <!-- Image Section -->
         <div class="w-full mb-6">
-          <img src="../assets/hiburan3.jpg" alt="Pakansari olahraga" class="w-full h-full object-cover rounded-lg" />
+          <img src="./assets/hiburan3.jpg" alt="Pakansari olahraga" class="w-full h-full object-cover rounded-lg" />
           <small
             ><figcaption>
               Bernadya membawa pulang piala kategori Indonesia Top Female Artist of 2024, Indonesia Top Song of the Year 2024 melalui single hit Satu Bulan, Indonesia Top Artist of the Year 2024, dan Indonesia Top Album of 2024 untuk
