--- a/src/kategori-ekonomi.html
+++ b/src/kategori-ekonomi.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white z-20 fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between">
       <div class="flex items-center justify-center">
-        <img src="../assets/logo.png" alt="Logo" class="w-20 h-20" />
+        <img src="./assets/logo.png" alt="Logo" class="w-20 h-20" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
 
@@ -53,7 +53,7 @@
       <div class="flex flex-col px-8">
         <a href="ekonomi.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/IMG_5706.PNG" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/IMG_5706.PNG" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">Kenaikan Harga Pangan Menjelang Nataru</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i>Indah Sukma Anom - <span class="text-cyan-700">koma.com</span></p>
@@ -67,7 +67,7 @@
         </a>
         <a href="ekonomi2.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/ekonomi2.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/ekonomi2.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">RI Minta Apple Investasi Rp 16 Triliun Demi Jual iPhone 16</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i>Firda Dwi Muliawati - <span class="text-cyan-700">CNBC Indonesia </span></p>
@@ -81,7 +81,7 @@
         </a>
         <a href="ekonomi3.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/ekonomi3.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/ekonomi3.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">Komentar Emak-Emak Usai Prabowo Patok Uang Makan Gratis Rp 10.000</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i>Dela Naufalia - <span class="text-cyan-700"> CNN Indonesia </span></p>
