--- a/src/kategori-kuliner.html
+++ b/src/kategori-kuliner.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white z-20 fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between">
       <div class="flex items-center justify-center">
-        <img src="../assets/logo.png" alt="Logo" class="w-20 h-20" />
+        <img src="./assets/logo.png" alt="Logo" class="w-20 h-20" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
 
@@ -53,7 +53,7 @@
       <div class="flex flex-col px-8">
         <a href="kuliner.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/kuliner 1.PNG" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/kuliner 1.PNG" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">Jajanan Legend Betawi pada Festival Ciganjur</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i>Neelam Natali - <span class="text-cyan-700">koma.com</span></p>
@@ -68,7 +68,7 @@
         </a>
         <a href="kuliner2.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/kuliner1.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/kuliner1.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">Jembatan Spirited Away Ala Ghibli Ada di Depok</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i>Amalia Novia Putri - <span class="text-cyan-700">detikTravel</span></p>
@@ -84,7 +84,7 @@
         </a>
         <a href="kuliner3.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/kuliner3.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/kuliner3.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">Opor Susu Legendaris : Hangat Gurih Opor Kuah Susu Ayam Asap dan Daging Sapi</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i>Sonia Basoni - <span class="text-cyan-700"> detikFood</span></p>
