--- a/src/kategori-lifestyle.html
+++ b/src/kategori-lifestyle.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white z-20 fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between">
       <div class="flex items-center justify-center">
-        <img src="../assets/logo.png" alt="Logo" class="w-20 h-20" />
+        <img src="./assets/logo.png" alt="Logo" class="w-20 h-20" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
 
@@ -53,7 +53,7 @@
       <div class="flex flex-col px-8">
         <a href="lifestyle.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/lifestyle.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/lifestyle.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">5 Tips Agar Kehamilan dan Persalinan Lancar dan Mudah</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i>Aviatus - <span class="text-cyan-700">koma.com</span></p>
@@ -67,7 +67,7 @@
         </a>
         <a href="lifestyle2.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/lifestyle2.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/lifestyle2.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">Gaduh 'Guyonan' Gus Miftah, Psikolog Soroti Candaan yang Termasuk Bullying</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i>Nafilah Sri Sagita K - <span class="text-cyan-700"> Detikhealth</span></p>
@@ -82,7 +82,7 @@
         </a>
         <a href="lifestyle3.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/rebeca.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/rebeca.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">Pentingnya Kehadiran Pasangan Untuk Menguatkan Peran Ibu Dalam Keluarga</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i>Rebecca Rosevanya Johanna Rudiansyah, Nabila Tashandra - <span class="text-cyan-700">Kompas.com</span></p>
