--- a/src/kategori-sosial.html
+++ b/src/kategori-sosial.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white z-20 fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between">
       <div class="flex items-center justify-center">
-        <img src="../assets/logo.png" alt="Logo" class="w-20 h-20" />
+        <img src="./assets/logo.png" alt="Logo" class="w-20 h-20" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
 
@@ -53,7 +53,7 @@
       <div class="flex flex-col px-8">
         <a href="sosial.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/ondel.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/ondel.png" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">Pelestarian ondel-ondel di masa modernisasi</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i>Adelia Puspita - <span class="text-cyan-700">koma.com</span></p>
@@ -67,7 +67,7 @@
         </a>
         <a href="sosial2.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/sosial2.png.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/sosial2.png.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">Bupati Ajak Masyarakat Bergandeng Tangan Dukung Penyandang Disabilitas</h1>
               <p class="mb-2">
@@ -85,7 +85,7 @@
         </a>
         <a href="sosial3.html" class="mb-8">
           <div class="flex flex-col md:flex-row items-center gap-x-4">
-            <img src="../assets/sosial3.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
+            <img src="./assets/sosial3.jpg" width="100" height="100" class="w-96 h-72 rounded-xl" alt="" />
             <div class="flex flex-col w-full">
               <h1 class="text-3xl font-bold mb-4 text-blue-950">Kebaya Masuk Daftar UNESCO, tapi Identitasnya Milik 5 Negara</h1>
               <p class="mb-2"><i class="fas fa-user mr-1"></i>Bonauli - <span class="text-cyan-700"> detikTravel </span></p>
