--- a/src/lifestyle2.html
+++ b/src/lifestyle2.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white z-20 fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between">
       <div class="flex items-center justify-center">
-        <img src="../assets/logo.png" alt="Logo" class="w-20 h-20" />
+        <img src="./assets/logo.png" alt="Logo" class="w-20 h-20" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
 
@@ -57,7 +57,7 @@
 
         <!-- Image Section -->
         <div class="w-full min-h-96 mb-6">
-          <img src="../assets/lifestyle2.jpg" alt="Blog Image" class="w-full h-full object-cover rounded-lg" />
+          <img src="./assets/lifestyle2.jpg" alt="Blog Image" class="w-full h-full object-cover rounded-lg" />
           <small><figure>https://health.detik.com/berita-detikhealth/d-7674123/gaduh-guyonan-gus-miftah-psikolog-soroti-candaan-yang-termasuk-bullying Foto: dok. Pribadi Gus Mifta</figure></small>
           <!-- <p class="text-sm text-gray-600 mb-6 text-center">Foto : koma.com/Aviatus Sholihah</p> -->
         </div>
