--- a/src/sport.html
+++ b/src/sport.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="w-full h-20 bg-white fixed top-0 shadow-lg flex items-center px-6 sm:px-14 justify-between z-50">
       <div class="flex items-center">
-        <img src="../assets/logo.png" alt="Logo Koma" class="w-12 h-full mr-2" />
+        <img src="./assets/logo.png" alt="Logo Koma" class="w-12 h-full mr-2" />
         <h1 class="font-bold text-xl sm:text-2xl">Koma</h1>
       </div>
 
@@ -60,7 +60,7 @@
 
         <!-- Image Section -->
         <div class="w-full mb-6">
-          <img src="../assets/sport 1.PNG" alt="Pakansari olahraga" class="w-full h-96 object-cover rounded-lg" />
+          <img src="./assets/sport 1.PNG" alt="Pakansari olahraga" class="w-full h-96 object-cover rounded-lg" />
           <small><figcaption>Tampak depan Gor Pakansari Cibinong</figcaption></small>
         </div>
 
@@ -71,7 +71,7 @@
             bersantai dengan keluarga ataupun teman.
           </p>
 
-          <img src="../assets/sport 2.PNG" alt="Aktivitas olahraga di Pakansari" class="w-full h-auto mx-auto object-cover rounded-lg mb-4" />
+          <img src="./assets/sport 2.PNG" alt="Aktivitas olahraga di Pakansari" class="w-full h-auto mx-auto object-cover rounded-lg mb-4" />
           <small><figcaption>Lapangan sepak bola di dekat area trek Jogging Pakansari</figcaption></small>
 
           <p class="mb-4">
@@ -87,7 +87,7 @@
             saya ke Pakansari” ujar Tania pengunjung Pakansari Cibinong
           </p>
 
-          <img src="../assets/sport 3.PNG" alt="Kuliner di Pakansari" class="w-full h-auto mx-auto object-cover rounded-lg mb-4" />
+          <img src="./assets/sport 3.PNG" alt="Kuliner di Pakansari" class="w-full h-auto mx-auto object-cover rounded-lg mb-4" />
           <small><figcaption>Area bersantai keluarga di Pakansari Cibinong</figcaption></small>
 
           <p class="mb-4">
